had to add display flexbox to app to correct overlap

--- a/src/componets/trackInfo/CurrentTrack.css
+++ b/src/componets/trackInfo/CurrentTrack.css
@@ -23,10 +23,13 @@
   border: 3px solid goldenrod;
   width: 50%;
   height: 50%;
-  float: right;
-  margin-top: 0px;
+  margin-top: 10px;
   background-color: #282c34;
   color: #61dafb;
+}
+.App{
+  display: flexbox;
+  flex-wrap: wrap;
 }
 .songImg {
   width: 65%;
